--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <html>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link href="hazy.css" rel="stylesheet">
-	<link href="node_modules/c3/c3.css" rel="stylesheet">
-	<script src="node_modules/d3/d3.min.js" charset="utf-8"></script>
-	<script src="node_modules/c3/c3.min.js"></script>
+	<head>
+		<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<title>Hazy</title>
+		<link href="hazy.css" rel="stylesheet">
+		<link href="node_modules/c3/c3.css" rel="stylesheet">
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
+	</head>
 	<body class="hazy">
 		<center>
 			<table class="c3-title">
@@ -17,6 +20,8 @@
 			</table>
 		</center>
 		<div id="chart" class="c3-title">Loading...</div>
+		<script src="node_modules/d3/d3.min.js"></script>
+		<script src="node_modules/c3/c3.min.js"></script>
 		<script src="hazy.js"></script>
 	</body>
 </html>
