--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
-    	<title>Hazy</title>
+    	<title>hazy</title>
 		<link href="hazy.css" rel="stylesheet">
 		<link href="node_modules/c3/c3.css" rel="stylesheet">
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
