--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,18 @@
     <body class="hazyair">
         <table class="c3-title" width="100%">
             <tr>
-                <td align="left" width="33%">
+                <td align="left" width="30%">
                     <table>
-                        <tr id="type">
+                        <tr>
                             <th>Chart type:</th>
-                            <td id="dust" class="hazyair-link" onclick="hazyair(this.id, null)">dust</td>
-                            <td id="temperature" class="hazyair-link" onclick="hazyair(this.id, null)">temperature</td>
-                            <td id="pressure" class="hazyair-link" onclick="hazyair(this.id, null)">pressure</td>
-                            <td id="humidity" class="hazyair-link" onclick="hazyair(this.id, null)">humidity</td>
+                            <td id="dust" class="hazyair-link hazyair-hidden" onclick="hazyair(this.id, null)">dust</td>
+                            <td id="temperature" class="hazyair-link hazyair-hidden" onclick="hazyair(this.id, null)">temperature</td>
+                            <td id="pressure" class="hazyair-link hazyair-hidden" onclick="hazyair(this.id, null)">pressure</td>
+                            <td id="humidity" class="hazyair-link hazyair-hidden" onclick="hazyair(this.id, null)">humidity</td>
                         </tr>
                     </table>
                 </td>
-                <td align="center" width="33%">
+                <td align="center" width="40%">
                     <table >
                         <tr>
                             <th>Dust concentration chart during last</th>
