--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -33,6 +34,9 @@
         <div id="chart" class="c3-title">Loading...</div>
         <script src="node_modules/d3/d3.min.js"></script>
         <script src="node_modules/c3/c3.min.js"></script>
+        <script src="node_modules/es6-promise/dist/es6-promise.min.js"></script>
+        <script src="node_modules/es6-promise/dist/es6-promise.auto.min.js"></script>
+        <script src="node_modules/axios/dist/axios.min.js"></script>
         <script src="hazyair.js"></script>
     </body>
 </html>
