--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
         <link href="node_modules/c3/c3.css" rel="stylesheet">
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
     </head>
-    <body class="hazyair">
-        <table class="c3-title" width="100%">
+    <body class="hazyair-background">
+        <table class="c3-title hazyair-color" width="100%">
             <tr>
                 <td align="left" width="30%">
                     <table>
@@ -31,12 +31,14 @@
                 </td>
             </tr>
         </table>
-        <div id="chart" class="c3-title">Loading...</div>
+        <div id="chart" class="c3-title hazyair-color">Loading...</div>
         <script src="node_modules/d3/d3.min.js"></script>
         <script src="node_modules/c3/c3.min.js"></script>
-        <script src="node_modules/es6-promise/dist/es6-promise.min.js"></script>
-        <script src="node_modules/es6-promise/dist/es6-promise.auto.min.js"></script>
-        <script src="node_modules/axios/dist/axios.min.js"></script>
+        <!--<script src="node_modules/es6-promise/dist/es6-promise.min.js"></script>
+        <script src="node_modules/es6-promise/dist/es6-promise.auto.min.js"></script>-->
+        <!--<script src="node_modules/axios/dist/axios.min.js"></script>-->
+        <script src="node_modules/promise-polyfill/dist/promise.min.js"></script>
+        <script src="node_modules/whatwg-fetch/fetch.js"></script>
         <script src="hazyair.js"></script>
     </body>
 </html>
