--- a/public/index.html
+++ b/public/index.html
@@ -2,40 +2,43 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="theme-color" content="black">
         <title>hazyair</title>
-        <link href="hazyair.css" rel="stylesheet">
-        <link href="node_modules/c3/c3.css" rel="stylesheet">
+        <link rel="stylesheet" href="node_modules/c3/c3.css">
+        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="hazyair.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
     </head>
-    <body class="hazyair-background">
-        <table class="c3-title hazyair-color" width="100%">
-            <tr>
-                <td align="left" width="32%">
-                    <table>
-                        <tr id="type"></tr>
-                    </table>
-                </td>
-                <td align="center" width="36%">
-                    <table >
-                        <tr>
-                            <th id="title"></th>
-                            <td id="day" class="hazyair-link" onclick="hazyair(null, this.id)">day</td>
-                            <td id="week" class="hazyair-link" onclick="hazyair(null, this.id)">week</td>
-                            <td id="month" class="hazyair-link" onclick="hazyair(null, this.id)">month</td>
-                            <td id="year" class="hazyair-link" onclick="hazyair(null, this.id)">year</td>
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                </td>
-            </tr>
-        </table>
+    <body>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+            <a class="navbar-brand" href="http://marcin-sielski.github.io/hazyair">hazyair</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div id="type" class="navbar-nav">
+                    <a class="nav-item nav-link disabled">Chart:</a>
+                </div>
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link disabled hazyair-title">Period:</a>
+                    <a id="day" class="nav-item nav-link" href="#" onclick="hazyair(null, this.id)">day</a>
+                    <a id="week" class="nav-item nav-link" href="#" onclick="hazyair(null, this.id)">week</a>
+                    <a id="month" class="nav-item nav-link" href="#" onclick="hazyair(null, this.id)">month</a>
+                    <a id="year" class="nav-item nav-link" href="#" onclick="hazyair(null, this.id)">year</a>
+                </div>
+            </div>
+        </nav>
+
         <div id="chart" class="c3-title hazyair-color">Loading...</div>
         <script src="node_modules/d3/d3.min.js"></script>
         <script src="node_modules/c3/c3.min.js"></script>
         <script src="node_modules/promise-polyfill/dist/promise.min.js"></script>
         <script src="node_modules/whatwg-fetch/fetch.js"></script>
+        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="hazyair.js"></script>
     </body>
 </html>
