--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,10 @@
         </nav>
 
         <div id="chart" class="c3-title hazyair-color">Loading...</div>
-        <script src="node_modules/d3/d3.min.js"></script>
+        <script src="node_modules/d3/dist/d3.min.js"></script>
         <script src="node_modules/c3/c3.min.js"></script>
-        <script src="node_modules/promise-polyfill/dist/promise.min.js"></script>
-        <script src="node_modules/whatwg-fetch/fetch.js"></script>
+        <script src="node_modules/promise-polyfill/dist/polyfill.min.js"></script>
+        <script src="node_modules/whatwg-fetch/dist/fetch.umd.js"></script>
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
